Fixed the alignment of filter button on data analysis page: Kanchan

--- a/media/css/scss/section_data.scss
+++ b/media/css/scss/section_data.scss
@@ -251,5 +251,9 @@ table{
     background-color:#525252 !important;
 }
 
+#time_submit{
+    margin-top: 0px;
+}
+
 
 
